--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,64 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+#include <stdio.h>
+
+// Function declarations
+float add(float a, float b);
+float subtract(float a, float b);
+float multiply(float a, float b);
+float divide(float a, float b);
+
+int main() {
+    float num1, num2;
+    char operation;
+
+    // Input
+    printf("Enter first number: ");
+    scanf("%f", &num1);
+
+    printf("Enter an operation (+, -, *, /): ");
+    scanf(" %c", &operation);
+
+    printf("Enter second number: ");
+    scanf("%f", &num2);
+
+    // Perform the requested operation
+    switch (operation) {
+        case '+':
+            printf("%.2f + %.2f = %.2f\n", num1, num2, add(num1, num2));
+            break;
+        case '-':
+            printf("%.2f - %.2f = %.2f\n", num1, num2, subtract(num1, num2));
+            break;
+        case '*':
+            printf("%.2f * %.2f = %.2f\n", num1, num2, multiply(num1, num2));
+            break;
+        case '/':
+            if (num2 != 0) {
+                printf("%.2f / %.2f = %.2f\n", num1, num2, divide(num1, num2));
+            } else {
+                printf("Error: Division by zero\n");
+            }
+            break;
+        default:
+            printf("Error: Invalid operation\n");
+            break;
+    }
+
+    return 0;
+}
+
+// Function definitions
+float add(float a, float b) {
+    return a + b;
+}
+
+float subtract(float a, float b) {
+    return a - b;
+}
+
+float multiply(float a, float b) {
+    return a * b;
+}
+
+float divide(float a, float b) {
+    return a / b;
+}
